# AmityCoin-DO-NOT-USE

./: .appveyor.yml  .dockerignore  .gitattributes  .gitignore  .travis.yml  Build.md  CMakeLists.txt  README.md  VERSION  WinDaemon.md  WinMiner.md  appveyor.yml  docker-compose.yml
cmake/: ApplyDefaultBuildType.cmake  CompilerConfiguration.cmake  Dependencies.cmake  Platform.cmake  Version.cmake  VersionScript.cmake
include/: INode.h
scripts/changescripts/: makebigmoney.py  makesmallchange.py
scripts/checkpointer/: delayed-checkpoints.py  full-checkpoints.py
scripts/ci/: SendDiscordNotification.ps1  SendDiscordNotification.sh
src/: CMakeLists.txt
src/BinaryInfo/: daemon.rc  service.rc
src/Common/: ColouredMsg.h  FormatTools.cpp  ShuffleGenerator.h  StringTools.cpp  StringTools.h
src/CommonCLI/: CommonCLI.cpp  CommonCLI.h
src/CryptoNoteCore/: BlockValidationErrors.h  BlockchainCache.cpp  CachedBlock.cpp  Checkpoints.cpp  Core.cpp  Core.h  CryptoNoteBasicImpl.h  CryptoNoteSerialization.cpp  Currency.cpp  Currency.h  DataBaseConfig.cpp  DataBaseConfig.h  DatabaseBlockchainCache.cpp  Difficulty.cpp  Difficulty.h  ICore.h  Mixins.h  TransactionValidationErrors.h  UpgradeDetector.cpp  UpgradeDetector.h
src/CryptoNoteProtocol/: CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h
src/CryptoTest/: main.cpp
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonConfiguration.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Miner/: BlockchainMonitor.cpp  Miner.cpp  Miner.h  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  main.cpp
src/Mnemonics/: CRC32.h  Mnemonics.cpp  Mnemonics.h
src/NodeRpcProxy/: NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
src/P2p/: NetNode.cpp  NetNodeConfig.cpp  NetNodeConfig.h  P2pNode.cpp  PendingLiteBlock.h
src/Rpc/: CoreRpcServerCommandsDefinitions.h  RpcServer.cpp  RpcServer.h
src/Utilities/: FormatTools.cpp
src/Wallet/: WalletGreen.cpp  WalletSerializationV1.cpp  WalletUtils.cpp
src/WalletApi/: ApiDispatcher.cpp  WalletApi.cpp
src/WalletBackend/: Transfer.cpp  WalletBackend.cpp  WalletSynchronizer.cpp
src/WalletService/: ConfigurationManager.cpp  ConfigurationManager.h  NodeFactory.cpp  PaymentGateService.cpp  PaymentGateService.h  PaymentServiceConfiguration.cpp  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletService.cpp  WalletService.h  WalletServiceConfiguration.cpp  WalletServiceConfiguration.h  main.cpp
src/config/: Ascii.h  CryptoNoteCheckpoints.h  CryptoNoteConfig.h  WalletConfig.h  version.h.in
src/crypto/: balancedsoftshell.h  chacha8.cpp  chacha8.h  crypto.cpp  crypto.h  hash-ops.h  hash.h  random.h  slow-hash.c  softshell.h
src/crypto/cnx/: cnx.cpp  cnx.h  configuration.h  mersenne-twister.h  randomizer.cpp  randomizer.h
src/crypto/cnx/operations/: cnx-operations-00000000.c  cnx-operations-00000001.c  cnx-operations-00000010.c  cnx-operations-00000011.c  cnx-operations-00000100.c  cnx-operations-00000101.c  cnx-operations-00000110.c  cnx-operations-00000111.c  cnx-operations-00001000.c  cnx-operations-00001001.c  cnx-operations-00001010.c  cnx-operations-00001011.c  cnx-operations-00001100.c  cnx-operations-00001101.c  cnx-operations-00001110.c  cnx-operations-00001111.c  cnx-operations-00010000.c  cnx-operations-00010001.c  cnx-operations-00010010.c  cnx-operations-00010011.c  cnx-operations-00010100.c  cnx-operations-00010101.c  cnx-operations-00010110.c  cnx-operations-00010111.c  cnx-operations-00011000.c  cnx-operations-00011001.c  cnx-operations-00011010.c  cnx-operations-00011011.c  cnx-operations-00011100.c  cnx-operations-00011101.c  cnx-operations-00011110.c  cnx-operations-00011111.c  cnx-operations-00100000.c  cnx-operations-00100001.c  cnx-operations-00100010.c  cnx-operations-00100011.c  cnx-operations-00100100.c  cnx-operations-00100101.c  cnx-operations-00100110.c  cnx-operations-00100111.c  (+217 more)
src/zedwallet/: AddressBook.cpp  ColouredMsg.h  CommandDispatcher.cpp  CommandImplementations.cpp  Fusion.cpp  Menu.cpp  Open.cpp  ParseArguments.cpp  ParseArguments.h  PasswordContainer.cpp  Sync.cpp  Tools.cpp  Transfer.cpp  ZedWallet.cpp
tests/: CMakeLists.txt
tests/DB/: 000004.sst  000016.sst  000026.sst  IDENTITY  MANIFEST-000021  MANIFEST-000031
tests/analysis/: .gitignore  MakeOctaveData.py
tests/benchmark/: BM_CryptoNightBalancedSoftShell.cpp  BM_CryptoNightSoftShell.cpp  BM_CryptoNightVariation.cpp  HashBasedBenchmark.cpp  HashBasedBenchmark.h  Main.cpp
tests/integration/: T_HashConsistency.cpp
